--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Tom Kache
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is my personal website.
+  Biochemist from FSU Jena and UHasselt 🇪🇺
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  Tomkaehst
@@ -29,7 +29,6 @@ github_username:  Tomkaehst
 # Build settings
 theme: minima
 plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
