--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ theme: minima
   skin: auto
   social_links:
     - {platform: github, user_url: "https://github.com/Tomkaehst"}
-    - {platform: orcid, user_url: "https://orcid.org/0000-0003-2915-5252"}
+    #- {platform: orcid, user_url: "https://orcid.org/0000-0003-2915-5252"}
 
 
 #plugins:
