New attempt minima theme

--- a/_config.yml
+++ b/_config.yml
@@ -18,23 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Tom Kache
-email: [Email Me](mailto:iciest.harness-6o@icloud.com?subject=Email%20From%20Tomkaehst.Github.io)
+title: Your awesome title
+email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Biochemist from FSU Jena and UHasselt 🇪🇺
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" 
-#github_username:  Tomkaehst
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 theme: minima
-  skin: auto
-  social_links:
-    - {platform: github, user_url: "https://github.com/Tomkaehst"}
-    #- {platform: orcid, user_url: "https://orcid.org/0000-0003-2915-5252"}
-
-
-#plugins:
+plugins:
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
